[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/PNG/Cars/car_black_2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Car.gd" type="Script" id=2]
[ext_resource path="res://scripts/Car/Engine.gd" type="Script" id=3]
[ext_resource path="res://scripts/Car/Transmission.gd" type="Script" id=4]
[ext_resource path="res://scenes/Car/Wheel.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.4914
height = 52.9825

[node name="Car" type="KinematicBody2D" groups=[
"cars",
]]
collision_layer = 8
collision_mask = 15
script = ExtResource( 2 )
wheel_base = 60
friction = -0.5
traction_fast = 2.0
traction_slow = 4.0

[node name="Engine" type="Node2D" parent="."]
script = ExtResource( 3 )
engine_power = 5000
fleewheel = 0.02

[node name="Transmission" type="Node2D" parent="."]
script = ExtResource( 4 )
gear_cool_down = 0.5

[node name="Wheels" type="Node2D" parent="."]

[node name="WheelFrontLeft" parent="Wheels" instance=ExtResource( 5 )]
position = Vector2( 34.9234, -21.7092 )
rotation = 1.5708
radius = 0.36

[node name="WheelFrontRigth" parent="Wheels" instance=ExtResource( 5 )]
position = Vector2( 35.4705, 19.3709 )
rotation = 1.5708
radius = 0.36

[node name="WheelBackLeft" parent="Wheels" instance=ExtResource( 5 )]
position = Vector2( -38.8913, -21.8268 )
rotation = 1.5708
radius = 0.36

[node name="WheelBackRigth" parent="Wheels" instance=ExtResource( 5 )]
position = Vector2( -38.4945, 19.0488 )
rotation = 1.5708
radius = 0.36

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
